# betting_chatgpt_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: init_db.py  logging.py
bot/: handlers.py  keyboards.py  main.py
config/: settings.py
models/: entities.py  schemas.py
providers/: interfaces.py  mock_providers.py
repositories/: db.py  repositories.py
scheduler/: jobs.py  scheduler.py
services/: cache.py  delivery_service.py  digest_generator.py  openai_explainer.py  recommendation_engine.py
templates/: digest_templates.py
tests/: test_recommendation_engine.py  test_templates.py
