[project]
name = "betting-telegram-digest-bot"
version = "0.1.0"
description = "Production-ready Telegram bot for sports betting digests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",
  "redis>=5.0.4",
  "apscheduler>=3.10.4",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "openai>=1.40.0",
  "tenacity>=8.3.0",
  "jinja2>=3.1.4",
  "structlog>=24.2.0",
  "python-dateutil>=2.9.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
